--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			input[type="text"] {width:98%;}
 			input[type="button"] {width:45%;cursor:pointer;background-color:#DDDDDD;color:#111111}
 			div {display:none;text-align:center;font-size:12vw;cursor:pointer;}
+			#clicky {position:absolute;z-index:1;left:0;top:0;width:100%;height:100%;background-color:transparent}
 			@media (max-width: 1000px) {
 				input {font-size:5vh}
 				div {font-size:11vh}
@@ -28,12 +29,14 @@
 			<input type="text" value="Look at that big brown bear swim" ondblclick="this.value=''" onkeydown="enter(event)" /><br /><br />
 			<input type="button" value="Create" onclick="create()" />
 		</fieldset>
-		<div onclick="next()"></div>
+		<div></div>
+		<div id="clicky" onclick="next()"></div>
 		<script>
 			var words = [], index = 0,
 			fieldset = document.getElementsByTagName('fieldset')[0],
 			text = document.getElementsByTagName('input')[0],
 			div = document.getElementsByTagName('div')[0],
+			clicky = document.getElementsByTagName('div')[1],
 			create = () => {
 				if(text.value.length < 4) return false;
 				var source = text.value.replace(/\n/g,'').split(' ').reverse(),
@@ -44,7 +47,7 @@
 				}
 				fieldset.style.display = "none";
 				div.innerText = "";
-				div.style.display = "block";
+				div.style.display = clicky.style.display = "block";
 				next();
 			},
 			next = () => {
@@ -52,7 +55,7 @@
 					div.innerText = " ";
 					setTimeout(function(){
 						fieldset.style.display = "block";
-						div.style.display = "none";
+						div.style.display = clicky.style.display  = "none";
 						index = 0;
 						words = [];
 					},1500);
